--- a/shoptiensinhnhat/src/app/app.component.html
+++ b/shoptiensinhnhat/src/app/app.component.html
@@ -1,29 +1,28 @@
-<div class="main">
+<div class="main col-12">
   <div class="header">
     <div class="title">
       <h3 class="title-main">Tiền Sinh Nhật - Tiền Số Đôi Vợ Chồng</h3>
       <h3 class="discription">NHIỀU NHẤT VIỆT NAM</h3>
       <div class="contact">
         <span>
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="{{faceBook}}" target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-square-facebook"></i> Facebook
           </a>
           &nbsp; &nbsp;|&nbsp; &nbsp;
         </span>
         <span>
           <a href="http://" target="_blank" rel="noopener noreferrer">
-            <i class="fa-solid fa-phone-flip"></i> 0965382654
+            <i class="fa-solid fa-phone-flip"></i> {{phone}}
           </a>
           &nbsp; &nbsp; | &nbsp; &nbsp;
         </span>
         <span>
           <a href="http://" target="_blank" rel="noopener noreferrer">
-            <img alt="" draggable="false" src="../assets/image/zalo.png" class="zalo"> 0368563954
+            <img alt="" draggable="false" src="../assets/image/zalo.png" class="zalo"> {{zalo}}
           </a>
         </span>
       </div>
-      <div class="address"><i class="fa-solid fa-map-location-dot"></i> 48A, duong 800, nghia tan, cau
-        giay, Ha Noi</div>
+      <div class="address"><i class="fa-solid fa-map-location-dot"></i> {{address}}</div>
     </div>
 
   </div>
@@ -101,16 +100,16 @@
 
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price1k}}</span></p>
+          <p class="price">{{item.currency}}<span>{{price1k}}</span></p>
         </div>
-        <div class="btn-order">
-          <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-              class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
-            </svg></p>
+        <div class="btn-order col-4">
+            <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
+              </svg></p>
             <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
@@ -128,17 +127,17 @@
         </span>
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price10k}}</span></p>
+          <p class="price">{{item.currency}}<span>{{price10k}}</span></p>
         </div>
-        <div class="btn-order">
+        <div class="btn-order col-4">
           <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
               <path fill-rule="evenodd"
                 d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
             </svg></p>
-            <app-button-choose></app-button-choose>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
     </div>
@@ -152,17 +151,17 @@
 
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price2k}}</span></p>
+          <p class="price">{{item.currency}}<span>{{price2k}}</span></p>
         </div>
-        <div class="btn-order">
+        <div class="btn-order col-4">
           <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
               <path fill-rule="evenodd"
                 d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
             </svg></p>
-            <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
     </div>
@@ -176,17 +175,17 @@
 
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price5k}}</span></p>
+          <p class="price">{{item.currency}}<span>{{price5k}}</span></p>
         </div>
-        <div class="btn-order">
+        <div class="btn-order col-4">
           <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
               <path fill-rule="evenodd"
                 d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
             </svg></p>
-            <app-button-choose></app-button-choose>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
     </div>
@@ -204,17 +203,17 @@
         </span>
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price20k}}</span></p>
+          <p class="price">{{item.currency}}<span>{{price20k}}</span></p>
         </div>
-        <div class="btn-order">
+        <div class="btn-order col-4">
           <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-                  d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
-          </svg></p>
-          <app-button-choose></app-button-choose>
+              class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
+            </svg></p>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
     </div>
@@ -231,17 +230,17 @@
         </span>
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price50k}}</span></p>
+          <p class="price">{{item.currency}}<span>{{price50k}}</span></p>
         </div>
-        <div class="btn-order">
+        <div class="btn-order col-4">
           <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-                  d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
-          </svg></p>
-          <app-button-choose></app-button-choose>
+              class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
+            </svg></p>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
     </div>
@@ -259,48 +258,54 @@
         </span>
       </div>
       <div class="result-content">
-        <div>
+        <div class="col-8">
           <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{item.displayValue}}</span></p>
+          <p class="price">{{item.currency}}<span>{{item.displayValue}}</span></p>
         </div>
-        <div class="btn-order">
-          <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-                  d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
-          </svg></p>
-          <app-button-choose></app-button-choose>
-        </div>
-      </div>
-    </div>
-    <div class="list-money" *ngIf="item.displayValue == 200000">
-      <div class="in-side">
-        <span class="code-10k">{{item.code}}</span>
-        <span class="siri-10k">
-          {{item.seri}}
-        </span>
-        <img src="../assets/image/5k.png" alt="">
-
-      </div>
-      <div class="result-content">
-        <div>
-          <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
-          <p class="price">vnd<span>{{price200k}}</span></p>
-        </div>
-        <div class="btn-order">
+        <div class="btn-order col-4">
           <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
               <path fill-rule="evenodd"
                 d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
             </svg></p>
-            <app-button-choose></app-button-choose>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
+        </div>
+      </div>
+    </div>
+    <div class="list-money" *ngIf="item.displayValue == 200000">
+      <div class="in-side">
+        <span class="code-200k">{{item.code}}</span>
+        <span class="siri-200k">
+          {{item.seri}}
+        </span>
+        <img src="../assets/image/200k.jpg" alt="">
+        <span class="code-200k-bt">{{item.code}}</span>
+        <span class="siri-200k-bt">
+          {{item.seri}}
+        </span>
+      </div>
+      <div class="result-content">
+        <div class="col-8">
+          <i class="fa-solid fa-money-bill"></i><span class="code-price">{{item.code}} {{item.seri}}</span>
+          <p class="price">{{item.currency}}<span>{{price200k}}</span></p>
+        </div>
+        <div class="btn-order col-4">
+          <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-arrows-angle-contract" viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M.172 15.828a.5.5 0 0 0 .707 0l4.096-4.096V14.5a.5.5 0 1 0 1 0v-3.975a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1h2.768L.172 15.121a.5.5 0 0 0 0 .707zM15.828.172a.5.5 0 0 0-.707 0l-4.096 4.096V1.5a.5.5 0 1 0-1 0v3.975a.5.5 0 0 0 .5.5H14.5a.5.5 0 0 0 0-1h-2.768L15.828.879a.5.5 0 0 0 0-.707z" />
+            </svg></p>
+          <app-button-choose (AddToCartEvent)="addToCart(item)"></app-button-choose>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div id="message-empty" style="bottom: 60px; text-align: center; {{message =='' ? 'display: none' : 'display: block'}}" >
-  <h5 style="text-align: center;" >{{message}}</h5>
+<div class="get-padding">
+
+</div>
+<div id="message-empty" style="bottom: 60px; text-align: center; {{message =='' ? 'display: none' : 'display: block'}}">
+  <h5 style="text-align: center;">{{message}}</h5>
 </div>
 <div class="check-order" *ngIf="quantity">
   <div class="choose">
@@ -309,4 +314,4 @@
     <a class="show-order" (click)="open()">Kiểm tra đơn hàng</a>
   </div>
 </div>
-<app-modal [getOrder]="getOrder" (quantity)="onQuantityChanged($event)"></app-modal>
+<app-modal [getOrder]="getOrder" [totalOrder]="totalOrder" (quantity)="onQuantityChanged($event)"></app-modal>
