--- a/shoptiensinhnhat/src/app/button-choose/button-choose.component.css
+++ b/shoptiensinhnhat/src/app/button-choose/button-choose.component.css
@@ -5,7 +5,12 @@
   width: 100px;
   border-color: rgba(0, 0, 0, 0);
   border-width: 2px;
-  background-color: rgb(255, 0, 0);
   transition-duration: 0s;
   color: rgb(255, 255, 255);
+}
+.color_button {
+  background-color: rgb(255, 0, 0);
+}
+.color_button_disabled {
+  background-color:rgb(250, 112, 112)
 }
